--- a/templates/form.html
+++ b/templates/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Site Analyzer</title>
+    <title>Site Analyser</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container text-center">
-      <h1>Site Analyzer</h1>
+      <h1>Site Analyser</h1>
       <form
         action="/results"
         method="post"
@@ -24,7 +24,7 @@
         {{end}}
         <div class="d-flex gap-2 w-100 justify-content-center">
           <input type="text" name="url" class="form-control" />
-          <input type="submit" value="Analyze" class="btn btn-primary" />
+          <input type="submit" value="Analyse" class="btn btn-primary" />
         </div>
       </form>
     </div>
