--- a/templates/results.html
+++ b/templates/results.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Site Analyzer</title>
+    <title>Site Analyser</title>
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="container">
-      <h1 class="text-center">Site Analyzer Results</h1>
+      <h1 class="text-center">Site Analyser Results</h1>
       <table class="table table-striped">
         <tr>
           <th>URL</th>
